--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   width: 800px;
+  position: absolute;
   left: 50%;
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
