--- a/style.css
+++ b/style.css
@@ -6,17 +6,27 @@ body {
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
   -o-trasnform: translatex(-50%);
+  font-family: glegoo;
 }
 
 section {
   margin-left: 10px;	
 }
 
+.title {
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.subtitle {
+  font-size: 14px;
+}
+
 .contents {
   margin-left: 15px;
+  font-size: 13px;
 }
 
 .notes {
   font-size: 12px;
-  font-family: 'Courier New';
 }
