--- a/style.css
+++ b/style.css
@@ -5,8 +5,18 @@ body {
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
-  -o-trasnform: translatex(-50%);
+  -o-transform: translatex(-50%);
   font-family: glegoo;
+  color: rgb(252, 255, 216);
+  background-color: rgb(51, 51, 51);    
+}
+
+.heading {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 25px;
+  margin-top: 70px;
+  color: rgb(255, 232, 138);
 }
 
 section {
@@ -15,18 +25,18 @@ section {
 
 .title {
   font-weight: 400;
-  font-size: 15px;
+  font-size: 20px;
 }
 
 .subtitle {
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .contents {
-  margin-left: 15px;
-  font-size: 13px;
+  margin-top: 12px;
+  font-size: 15px;
 }
 
 .notes {
-  font-size: 12px;
+  font-size: 14px;
 }
