--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
   -o-transform: translatex(-50%);
-  font-family: glegoo;
+  font-family: "andale mono";
   color: rgb(252, 255, 216);
   background-color: rgb(51, 51, 51);    
 }
@@ -20,16 +20,21 @@ body {
 }
 
 section {
-  margin-left: 10px;	
+  margin-top: 12px;
+  padding-bottom: 12px;
+  border-bottom: 2px dotted rgb(75, 75, 75);
 }
 
 .title {
   font-weight: 400;
   font-size: 20px;
+  margin-bottom: 8px;
+  color: rgb(95, 174, 179);
 }
 
 .subtitle {
   font-size: 18px;
+  margin-bottom: 4px;
 }
 
 .contents {
@@ -40,3 +45,19 @@ section {
 .notes {
   font-size: 14px;
 }
+
+.brandText {
+    text-anchor: middle;
+    fill: rgb(170, 222, 154);
+}
+
+svg {
+    background-color: rgb(65, 65, 65);
+    border-radius: 3px;
+}
+
+div {
+    padding-bottom: 5px;
+}
+
+
