--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 body {
+  background-color: rgb(51, 51, 51);
+  margin: 0;
+  padding: 0;
+  box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  font-family: "andale mono";
+  color: rgb(252, 255, 216);
+}
+
+.main-contents {
   width: 800px;
   position: absolute;
   left: 50%;
@@ -6,9 +16,6 @@ body {
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
   -o-transform: translatex(-50%);
-  font-family: "andale mono";
-  color: rgb(252, 255, 216);
-  background-color: rgb(51, 51, 51);
 }
 
 a, a:link, a:hover, a:focus, a:visited {
@@ -26,11 +33,26 @@ a, a:link, a:hover, a:focus, a:visited {
 }
 
 .heading {
-  font-size: 32px;
-  font-weight: bold;
+  width: 100%;
+  height: 75px;
+  background-color: rgb(35, 35, 35);
   margin-bottom: 25px;
-  margin-top: 70px;
-  color: rgb(255, 232, 138);
+  position: relative;
+}
+
+.heading .text {
+  font-size: 26px;
+  font-weight: bold;
+  color: rgb(80, 80, 80);
+  width: 800px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  text-shadow: 1px 1px 2px rgba(20, 20, 20, 1);
 }
 
 section {
